Add conf models and unit tests

--- a/examples/train_cnn_mnist/train.toml
+++ b/examples/train_cnn_mnist/train.toml
@@ -4,7 +4,7 @@ cuda_id = 0
 experiment_name = "handwritten_digit_classification"
 
 [model]
-name = "models.SimpleCNN"
+target = "models.SimpleCNN"
 input_dims = 1
 layers = 4
 dropout = 0.5
@@ -13,26 +13,26 @@ output_dims = 10
 [training]
 epochs = 100
 epoch_schedulers = [
-    {class = "torch.optim.schedulers.CosineAnnealing"}
+    {target = "torch.optim.schedulers.CosineAnnealing"}
 ]
 
 [training.checkpoint]
 path = "chckpt"
-monitor = {"metric" = "Precision", stage = "val"}
+monitor = {"metric" = "Precision", "stage" = "val"}
 filename = "{epoch}_{val_fbeta_score:.2f}_convlstm"
 mode = "max"
 
 [training.optimizer]
-class = "torch.optim.Adam"
+target = "torch.optim.Adam"
 lr = 0.0001
 weight_decay = 0.03
 
 [training.criterion]
-class = "torch.nn.NLLLoss"
-weight = [.1, .1, .1, .1, .1, .1, .1, .1, .1, .1]
+target = "torch.nn.NLLLoss"
+weight = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
 
 [training.dataset]
-class = "aaa.MNISTCustomDataset"
+target = "aaa.MNISTCustomDataset"
 root_dir = "/data/mnist/train"
 batch_size = 10
 shuffle = true
@@ -42,7 +42,7 @@ num_workers = 4
 run_every_epoch = 1
 
 [validation.dataset]
-class = "aaa.MNISTCustomDataset"
+target = "aaa.MNISTCustomDataset"
 root_dir = "/data/mnist/val"
 batch_size = 10
 shuffle = false
