--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "sp-seg-tool"
+name = "mlkit"
+version = "2023.05a0"
 description = "MLKit: A quick way to start with machine and deep learning"
 requires-python = ">=3.10"
 license = {file = "LICENSE"}
@@ -23,7 +24,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 dependencies = [
-    "pytorch",
+    "torch",
     "numpy>=1.23.0",
     "pydantic>=1.10.0",
     "scikit-learn>=1.2.0",
@@ -31,7 +32,7 @@ dependencies = [
     "tqdm",
     "toml"
 ]
-dynamic = ["version", "readme"]
+dynamic = ["readme"]
 
 [tool.setuptools]
 include-package-data = true
@@ -40,8 +41,16 @@ include-package-data = true
 where = ["."]
 
 [tool.setuptools.dynamic]
-version = {attr = "_version.VERSION"}
 readme = {file = "README.MD"}
 
 
 [tool.pydocstyle]
+
+
+[tool.mypy]
+files = [
+    "mlkit",
+]
+
+[project.scripts]
+mlflow = "mlkit.scripts:generate_template"
