--- a/env.yaml
+++ b/env.yaml
@@ -7,6 +7,7 @@ dependencies:
   - python=3.10
   - pytorch
   - pytorch-cuda=11.8
+  - torchvision 
   - torchmetrics
   - lightning
   - scikit-learn
