--- a/examples/train_cnn_mnist/conf.toml
+++ b/examples/train_cnn_mnist/conf.toml
@@ -10,9 +10,9 @@ dropout = 0.5
 output_dims = 10
 
 [training]
-epochs = 100
+epochs = 10
 epoch_schedulers = [
-    {target = "torch.optim.schedulers::CosineAnnealing"}
+    {target = "torch.optim.lr_scheduler::CosineAnnealingLR", T_max = 100}
 ]
 
 [training.checkpoint]
@@ -28,7 +28,7 @@ lr = 0.0001
 weight_decay = 0.03
 
 [training.criterion]
-target = "torch.nn::NLLLoss"
+target = "torch.nn::CrossEntropyLoss"
 weight = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
 
 [validation]
