--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "scikit-learn>=1.2.0",
     "colormath",
     "tqdm",
-    "toml"
+    "typer-cli",
+    "toml; python_version=='3.10'"
 ]
 dynamic = ["readme"]
 
