--- a/examples/train_cnn_mnist/conf.toml
+++ b/examples/train_cnn_mnist/conf.toml
@@ -18,14 +18,14 @@ epoch_schedulers = [
 [training.checkpoint]
 path = "chckpt"
 monitor = {"metric" = "Precision", "stage" = "val"}
-filename = "{epoch}_{val_precision:.2f}_convlstm"
+filename = "{epoch}_{val_precision:.2f}_cnn"
 mode = "max"
 save_top_k = 1
 
 [training.optimizer]
 target = "torch.optim::Adam"
-lr = 0.0001
-weight_decay = 0.03
+lr = 0.001
+weight_decay = 0.01
 
 [training.criterion]
 target = "torch.nn::CrossEntropyLoss"
