--- a/.github/workflows/python-test-python3.10.yml
+++ b/.github/workflows/python-test-python3.10.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install pytest
-        run: conda install pytest
+        run: pip install pytest
       - name: Run unit tests
-        run: pytest tests/
+        run: make test
