--- a/.github/workflows/python-test-python3.10.yml
+++ b/.github/workflows/python-test-python3.10.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install mlkit and dependencies
+        run: pip install .
       - name: Install pytest
         run: pip install pytest
       - name: Run unit tests
