--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,10 @@ dependencies = [
     "scikit-learn>=1.2.0",
     "colormath",
     "tqdm",
-    "typer-cli==0.9.*",
-    "toml; python_version=='3.10'"
+    "typer[all]",
+    "toml; python_version<'3.11'"
 ]
+requires-python = ">=3.10"
 dynamic = ["readme"]
 
 [tool.setuptools]
