--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ classifiers = [
 ]
 dependencies = [
     "torch",
+    "lightning",
+    "torchmetrics",
     "numpy>=1.23.0",
     "pydantic>=1.10.0",
     "scikit-learn>=1.2.0",
