--- a/examples/train_cnn_mnist/conf.toml
+++ b/examples/train_cnn_mnist/conf.toml
@@ -1,6 +1,8 @@
 [base]
 seed = 0
 experiment_name = "handwritten_digit_classification"
+log_level = "info"
+log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 
 [model]
 target = "./model.py::SimpleCNN"
@@ -41,12 +43,12 @@ target = "./dataset.py::MNISTCustomDataset"
 root_dir = "./mnist"
 
 [dataset.train.loader]
-batch_size = 10
+batch_size = 150
 shuffle = true
 num_workers = 4
 
 [dataset.validation.loader]
-batch_size = 10
+batch_size = 150
 shuffle = false
 num_workers = 4
 
