--- a/dev-env.yaml
+++ b/dev-env.yaml
@@ -1,10 +1,10 @@
-name: mlkit-dev-3.11
+name: mlkit-dev
 channels:
   - pytorch 
   - nvidia 
   - conda-forge
 dependencies:
-  - python=3.11
+  - python=3.10
   - pytorch
   - pytorch-cuda=11.8
   - torchvision 
