Exclude 'examples' dir from building

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
+exclude = ["examples*"]
 
 [tool.setuptools.dynamic]
 readme = {file = "README.MD"}
