--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ requires-python = ">=3.10"
 license = {file = "LICENSE"}
 keywords = ["deep learning", "training pipeline"]
 authors = [
+    {name = "Jakub Walczak", email = "jakub.walczak@p.lodz.pl"},
     {name = "Marco Mancini"},
     {name = "Mirko Stojiljkovic"},
-    {name = "Jakub Walczak", email = "jakub.walczak@p.lodz.pl"},
     {name = "Shahbaz Alvi"},
 ]
 classifiers = [
@@ -55,7 +55,7 @@ readme = {file = "README.MD"}
 files = [
     "mlkit",
 ]
-exclude = ["tests"]
+exclude = ["tests/", "examples/"]
 
 [project.scripts]
 mlkit = "mlkit.cli.app:run"
