--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: pytest
 
 on: 
   pull_request:
-    types: [opened, synchronized]
+    types: [opened, synchronize]
   workflow_dispatch:
 
 jobs:
