--- a/env.yaml
+++ b/env.yaml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - python=3.10
   - pytorch
-  - pytorch-cuda=11.8
+  - pytorch-cuda
   - torchvision 
   - torchmetrics
   - lightning
@@ -15,6 +15,7 @@ dependencies:
   - pydantic
   - tqdm
   - toml
+  - jinja2
   - pip
   - pip:
     - typer[all]
