--- a/env.yaml
+++ b/env.yaml
@@ -4,15 +4,14 @@ channels:
   - nvidia 
   - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.11
   - pytorch
   - pytorch-cuda
   - torchvision 
   - torchmetrics
   - lightning
   - scikit-learn
-  - mlflow
-  - pydantic
+  - pydantic<2.0.0
   - tqdm
   - toml
   - jinja2
