--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ dependencies = [
     "torch",
     "lightning",
     "torchmetrics",
-    "numpy>=1.23.0",
-    "pydantic>=1.10.0",
-    "scikit-learn>=1.2.0",
+    "numpy<=1.25.0",
+    "pydantic<2.0.0",
+    "scikit-learn",
     "colormath",
     "tqdm",
     "typer[all]",
