--- a/.github/workflows/testpip_publish.yml
+++ b/.github/workflows/testpip_publish.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build MLKit and publish to TestPyPI
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
