--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,20 @@ authors = [
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
+    "Operating System :: OS Independent",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
-    "Operating System :: Microsoft :: Windows",
-    "Operating System :: Unix",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "Intended Audience :: End Users/Desktop",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Topic :: Software Development :: Libraries :: Python Modules"
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: Software Development :: Libraries",
 ]
 dependencies = [
     "torch",
@@ -46,6 +55,16 @@ exclude = ["examples*"]
 
 [tool.pydocstyle]
 
+[tool.isort]
+profile = "black"
+include_trailing_comma = true
+line_length = 79
+overwrite_in_place = true
+use_parentheses = true
+
+[tool.black]
+line_length = 79
+preview = true
 
 [tool.mypy]
 files = [
