--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -22,5 +22,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocstring[python]
+      - run: pip install mkdocs-material mkdocstrings[python]
       - run: mkdocs gh-deploy --force
