opnegeokube/kit4dl#34: Enable custom splits in prepare_trainvaldatasets

--- a/.pylintrc
+++ b/.pylintrc
@@ -9,4 +9,5 @@ disable=
     no-self-argument,
     no-member,
     too-few-public-methods,
-    too-many-arguments
+    too-many-arguments,
+    cyclic-import
