--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
 ]
 dependencies = [
-    "lightning<=2.1.0.rc0",
-    "torch>=1.11.0,<2.1.0",
-    "torchmetrics>=0.7.0,<1.1.0",
+    "lightning>=2.2.4",
+    "torch>=2.1.0",
+    "torchmetrics>=1.1.0",
     "numpy>=1.17.2,<=1.25.3",
-    "pydantic>=2.0.0,<2.2.0",
+    "pydantic>2.4.0",
     "scikit-learn",
     "colormath",
     "tqdm>=4.57.0,<4.67.0",
