--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,15 +32,35 @@ nav:
 - Data module: datamodule.md
 
 plugins:
+- search
 - mkdocstrings:
     handlers:
       python:
-        paths: [static]
+        paths: [.]
+        options:
+          members_order: source
+          separate_signature: true
+          filters: ["!^_(?!defer_build_mode)"]
+          docstring_options:
+            ignore_init_summary: true
+          merge_init_into_class: true
+          show_signature_annotations: true
+          signature_crossrefs: true
+        import:
+          - https://docs.python.org/3/objects.inv
 markdown_extensions:
-  - pymdownx.highlight:
-      anchor_linenums: true
-      line_spans: __span
-      pygments_lang_class: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences      
+- admonition
+- tables
+- toc:
+    permalink: true
+    title: Page contents
+- pymdownx.details
+- pymdownx.superfences
+- pymdownx.highlight:
+    pygments_lang_class: true
+- pymdownx.extra
+- pymdownx.emoji:
+    emoji_index: !!python/name:material.extensions.emoji.twemoji
+    emoji_generator: !!python/name:material.extensions.emoji.to_svg
+- pymdownx.tabbed:
+    alternate_style: true
